sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:10: error: Boolean does not take parameters
    else(getValeur(i)>getValeur(i+1)){
                                     ^