sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var lgr=getNombreValeurs;
  var i = 0;
  while (i<lgr-1){
    if (i<0){i=0}
    else if (getValeur(i)<getValeur(i+1)){
      i+=1;
    }
    else(getValeur(i)>getValeur(i+1)){
      echange(i,i+1);
      i-=1;
    }
  }
}